Fix table bugs Change hero background logic Set z-index of PL logo

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -2,17 +2,17 @@ section {
   flex-direction: column;
   /* height: 800px; */
   height: 100%;
-  /* position: relative; */
+  position: relative;
 
   /* background: #0c0c0c; */
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 30px;
-  /* z-index: 1; */
+  z-index: 1;
 }
 
-/* section:before {
+section:before {
   position: absolute;
   top: 0;
   left: 0;
@@ -25,7 +25,7 @@ section {
     ),
     linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, transparent 100%);
   z-index: 2;
-} */
+}
 
 section p {
   font-size: 2rem;
@@ -33,6 +33,11 @@ section p {
   padding-left: 2em;
   padding-right: 2em;
   text-align: center;
+}
+
+.hero__content p {
+  background-color: var(--title-color);
+  color: var(--secondary-color);
 }
 
 .hero__img--background {
@@ -62,12 +67,4 @@ section p {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.first p,
-.second p,
-.third p,
-.fourth p {
-  background-color: var(--title-color);
-  color: var(--secondary-color);
 }
