--- a/styles/style.css
+++ b/styles/style.css
@@ -41,30 +41,6 @@ img {
   width: 40%;
 }
 
-.first {
-  background-image: url("../assets/barcode.jpeg");
-  background-repeat: no-repeat;
-  background-size: 1300px;
-}
-
-.second {
-  background-image: url("../assets/room_1.jpg");
-  background-repeat: no-repeat;
-  background-size: 1300px;
-}
-
-.third {
-  background-image: url("../assets/instructions.png");
-  background-repeat: no-repeat;
-  background-size: 1300px;
-}
-
-.fourth {
-  background-image: url("../assets/assembly.jpeg");
-  background-repeat: no-repeat;
-  background-size: 1300px;
-}
-
 .intro {
   color: var(--secondary-text-color);
 }
@@ -83,6 +59,7 @@ img {
   height: auto;
   position: fixed;
   right: -33%;
+  z-index: 1;
 }
 
 *,
