--- a/styles/table.css
+++ b/styles/table.css
@@ -17,5 +17,6 @@ tr:nth-child(even) {
 }
 
 tr:nth-child(odd) {
+  background-color: var(--background-color);
   color: var(--text-color);
 }
